Ignore docs for now

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,5 +26,5 @@ jobs:
       - name: 🛠 Build library
         run: npm run build
 
-      - name: 📝 Build docs
-        run: npm run docs:build
+#      - name: 📝 Build docs
+#        run: npm run docs:build
