--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -21,7 +21,8 @@
         "noUnusedParameters": true,
         "erasableSyntaxOnly": true,
         "noFallthroughCasesInSwitch": true,
-        "noUncheckedSideEffectImports": true
+        "noUncheckedSideEffectImports": true,
+        "allowImportingTsExtensions": false
     },
     "include": [
         "vite.config.ts"
